added gesture + threeD integration

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Next-gen 3D</title>
 		<link rel="stylesheet" href="./style.css" />
-		<script type="module" src="main.js"></script>
+		<script type="module" src="./main.js"></script>
+		<script type="module" src="./threeD.js"></script>
 	</head>
 	<body>
 		<video id="video" autoplay playsinline style="display: none"></video>
 		<canvas id="mp-canvas" class="mp-canvas"></canvas>
-		<canvas id="threeD-canvas" class="threeD-canvas"></canvas>
+		<div id="three-container" class="three-container"></div>
 	</body>
 </html>
