--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
 		<link rel="stylesheet" href="./style.css" />
 		<script type="module" src="./main.js"></script>
 		<script type="module" src="./threeD.js"></script>
+		<script type="module" src="./drop_handler.js"></script>
 	</head>
 	<body>
+		<div
+			id="instructions"
+			class="instructions"
+			style="
+				z-index: 5;
+				position: absolute;
+				top: 10px;
+				color: white;
+				left: 10px;
+				background: rgb(0, 0, 0);
+				padding: 10px;
+				border-radius: 5px;
+			"
+		>
+			<p>Drag and drop a GLB file onto the page to view it in 3D.</p>
+		</div>
 		<video id="video" autoplay playsinline style="display: none"></video>
 		<canvas id="mp-canvas" class="mp-canvas"></canvas>
 		<div id="three-container" class="three-container"></div>
